<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:id="@+id/top_space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true" />

    <Space
        android:id="@+id/left_space"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true" />

    <Space
        android:id="@+id/right_space"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/exp_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/top_space"
        android:layout_toRightOf="@id/left_space"
        android:gravity="left|center_vertical"
        android:text="Experiment Name"
        android:textSize="24sp"
        tools:textSize="18sp" />

    <ImageView
        android:id="@+id/exp_owner_image_view"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_below="@id/top_space"
        android:layout_toLeftOf="@id/right_space"
        android:background="@color/black"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/info_linear_layout"
        android:layout_width="363dp"
        android:layout_height="353dp"
        android:layout_below="@id/exp_owner_image_view"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/exp_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="300"
            android:padding="5dp"
            android:text="Description of experiment"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/min_trials_text_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:padding="6dp"
            android:text="Minimum Number of Trials:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/current_trials_text_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:padding="6dp"
            android:text="Current Trials:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/region_text_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:padding="6dp"
            android:text="Region:"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/view_data_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:text="view data" />

    <LinearLayout
        android:id="@+id/button_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/comments_button"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginBottom="55dp"
            android:text="Comments" />

        <Button
            android:id="@+id/subscribe_button"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="54dp"
            android:text="subscribe" />
    </LinearLayout>

</RelativeLayout>