<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f5f5"
    android:orientation="vertical">

    <include
        layout = "@layout/custom_toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/subbed_experiment_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="13dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exp_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            app:backgroundTint="@color/custom_Yellow_dark"
            app:srcCompat="@android:drawable/ic_search_category_default" />
    </FrameLayout>


</LinearLayout>