package com.example.cmput301w21t25.activities_main;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.AmbiguousViewMatcherException;
import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.UiController;
import androidx.test.espresso.ViewAction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.example.cmput301w21t25.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.swipeLeft;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
/**
 * This test will create a blank user profile if launched for the first time,
 * and then subscribe to an experiment.
 */
public class SubscribeTest {

    public static ViewAction waitFor(long delay) {
        return new ViewAction() {
            @Override public Matcher<View> getConstraints() {
                return ViewMatchers.isRoot();
            }

            @Override public String getDescription() {
                return "wait for " + delay + "milliseconds";
            }

            @Override public void perform(UiController uiController, View view) {
                uiController.loopMainThreadForAtLeast(delay);
            }
        };
    }

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void subscribeTest() {
        onView(isRoot()).perform(waitFor(5000));

        try {
            ViewInteraction materialButton = onView(
                    allOf(withId(R.id.skipProfileCreationButton), withText("Skip"),
                            childAtPosition(
                                    childAtPosition(
                                            withId(android.R.id.content),
                                            0),
                                    3),
                            isDisplayed()));
            materialButton.perform(click());
        }
        catch (Exception e) {
            //ignoring this, it means that test was launched with a user already created (not first launch)
        }

        //swipe right
        onView(isRoot()).perform(waitFor(5000));
        onView(isRoot()).perform(swipeLeft());
        onView(isRoot()).perform(waitFor(5000));

        ViewInteraction floatingActionButton = onView(
                allOf(withId(R.id.exp_search_button),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        1),
                                1),
                        isDisplayed()));
        floatingActionButton.perform(click());

        onView(isRoot()).perform(waitFor(5000));

        DataInteraction linearLayout = onData(anything())
                .inAdapterView(allOf(withId(R.id.search_exp_list_view),
                        childAtPosition(
                                withClassName(is("android.widget.FrameLayout")),
                                1)))
                .atPosition(0);
        linearLayout.perform(click());

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.subscribe_button), withText("subscribe"),
                        childAtPosition(
                                allOf(withId(R.id.button_linear_layout),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                5)),
                                1),
                        isDisplayed()));
        materialButton2.perform(click());

        try {
            ViewInteraction imageView = onView(
                    allOf(withId(R.id.imageView2),
                            withParent(allOf(withId(R.id.background),
                                    withParent(withId(R.id.subbed_experiment_list_view)))),
                            isDisplayed()));
            imageView.check(matches(isDisplayed()));
        }
        catch (AmbiguousViewMatcherException e) {
            //This is ok because it means we've subscribed to multiple experiment (test was run multiple times, existing subscriptions are present)
        }

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
